# card_transactions_analysis

./: .gitignore  README.md  data_dictionary_and_summary.ipynb  main.py  pyproject.toml  requirements.txt
data/: adults_2550_female_rural_0000-0201.csv  adults_2550_female_rural_0404-0605.csv  adults_2550_female_rural_0606-0807.csv  adults_2550_female_rural_0808-1009.csv  adults_2550_male_rural_0202-0403.csv  adults_2550_male_rural_0404-0605.csv  adults_2550_male_rural_0606-0807.csv  adults_2550_male_rural_0808-1009.csv  adults_50up_female_rural_0000-0201.csv  adults_50up_female_rural_0202-0403.csv  adults_50up_female_rural_0404-0605.csv  adults_50up_female_rural_0606-0807.csv  adults_50up_female_rural_0808-1009.csv  adults_50up_male_rural_0202-0403.csv  adults_50up_male_rural_0404-0605.csv  adults_50up_male_rural_0606-0807.csv  adults_50up_male_rural_0808-1009.csv  customers.csv  young_adults_female_rural_0606-0807.csv  young_adults_female_rural_0808-1009.csv  young_adults_female_urban_0000-0201.csv  young_adults_female_urban_0808-1009.csv  young_adults_male_rural_0202-0403.csv  young_adults_male_rural_0606-0807.csv  young_adults_male_rural_0808-1009.csv
